Changes since version 2.0.0
---------------------------

- Fixed an assert which could occur on connection establishment if there 
  wasn't anymore file descriptors available.

- Improved support for on demand server activation in IcePack.

- Improved the IcePack registry to prevent potential deadlocks caused by
  thread starvation. NOTE: it's now required to configure the endpoints of
  IcePack.Registry.Internal object adapter.

- Fixed a bug where Ice::ObjectAdapter::activate() could throw 
  Ice::ObjectAdapterDeactivatedException if the object adapter was deactivated
  concurrently.

- Fixed a bug where setting the locator proxy on a indirect proxy could
  cause an assert.

- Fixed a bug in IceSSL when multiple communicators are used.

- Added ice_ping optimization in the Freeze evictor: for operation
  "ice_ping", the object is not loaded in the cache, Freeze only
  checks if the object is in the cache or the database.

- Fixed a slice2cpp failure when the --output-dir option specified a
  directory containing backslashes.

- Changed the signature of Ice::Service::main() and Ice::Service::run()
  to accept a reference to argc (int & argc) rather than passing argc
  by value (int argc). This is to ensure that, if Ice::initialize() or
  Ice::Service::initializeCommunicator() rewrites argv, argc reflects
  the number of elements of the rewritten argument vector.

- Fixed an encoding bug in IceSSL.

- Fixed incorrect logging message if no more endpoints are available
  for retry.

- Added setDefaultContext() and getDefaultContext() to the
  Ice::Communicator interface. This allows a default context to be
  established on a communicator-wide basis. See section 29.8.3 in the
  doc.

  Added ice_defaultContext to Ice::ObjectProxy. This creates a new
  proxy that uses the default context established on the communicator.

- Fixed a rare proxy marshaling bug that could cause the receiver to
  encounter an UnmarshalOutOfBoundsException.
